Implementando endpoint para deletar os recursos Pessoa e Categoria

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 requisicao.invalida=Requisi\u00E7\u00E3o Inv\u00E1lida!
+recurso.nao-encontrado=Recurso n\u00E3o encontrado!
 
 categoria.nome=Nome
 
