--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 requisicao.invalida=Requisi\u00E7\u00E3o Inv\u00E1lida!
 recurso.nao-encontrado=Recurso n\u00E3o encontrado!
 recurso.operacao-nao-permitida=Opera\u00E7\u00E3o n\u00E3o permitida!
+pessoa.inativa-ou-inexistente=Pessoa inativa ou inexistente para incluir no lan\u00E7amento!
 
 categoria.nome=Nome
 
